refactor test and build parameters