@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-   Copyright 2017 Decipher Technology Studios LLC
 
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -66,7 +52,7 @@
         <docker.vault.host>vault.docker</docker.vault.host>
         <docker.nginx.port>443</docker.nginx.port>
         <docker.vault.token>6edb70bd-3398-1f42-d67e-b9db377223cd</docker.vault.token>
-        <docker.vault.github.token>MY_GITHUB_PAT_FOR_TESTS</docker.vault.github.token>
+        <docker.vault.github.token>${env.MY_GITHUB_PAT_FOR_VAULT_LOGIN}</docker.vault.github.token>
         <jacoco.integration.file>${project.build.directory}/jacoco-integration.exec</jacoco.integration.file>
         <jacoco.merged.file>${project.build.directory}/jacoco.exec</jacoco.merged.file>
         <jacoco.unit.file>${project.build.directory}/jacoco-unit.exec</jacoco.unit.file>
@@ -211,13 +197,12 @@
                                     <alias>${docker.vault.host}</alias>
                                 </network>
                                 <wait>
-                                    <!--<time>10000</time>
-                                    <http>
-                                        <url>http://127.0.0.1:8200/v1/sys/health</url>
-                                        <method>GET</method>
-                                        <status>200..399</status>
-                                    </http>-->
                                     <time>10000</time>
+<!--                                    <http>-->
+<!--                                        <url>http://127.0.0.1:8200/v1/sys/health</url>-->
+<!--                                        <method>GET</method>-->
+<!--                                        <status>200..399</status>-->
+<!--                                    </http>-->
                                     <exec>
                                         <postStart>sh /home/vault/enable-github-auth.sh</postStart>
                                     </exec>
@@ -343,7 +328,6 @@
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <runOrder>${maven.test.runOrder}</runOrder>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <includes>
                         <include>**/Test*.class</include>
                         <include>**/Spec*.class</include>
@@ -419,7 +403,7 @@
                                         <limit>
                                             <counter>COMPLEXITY</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.75</minimum>
+                                            <minimum>0.30</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
